# ImNimation

./: .gitignore  CMakeLists.txt  README.md
include/: gui.hpp  imnimation.hpp  instance.hpp
include/resources/: resource.rc
src/: gui.cpp  instance.cpp  main.cpp
